# dublin-energy-model

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  environment.yml  eppy_resi_modelling.ipynb  pyproject.toml  requirements.txt  resi_demand_scaled.ipynb
.Trash-0/files/: calculate_total_dublin_demand.md  calculate_total_dublin_demand.py
.Trash-0/info/: Untitled.ipynb.trashinfo  calculate_total_dublin_demand.md.trashinfo  calculate_total_dublin_demand.py.trashinfo  estimate_dublin_sa_emissions.ipynb.trashinfo
.devcontainer/: devcontainer.json
click/: meta.yaml
notebooks/: calculate_total_dublin_demand.md  calculate_total_dublin_demands.md  calculate_total_emissions.md  commercial_modelling.md  decarb-zones.md  eppy_resi_modelling.md  eppy_residential_archetypes.md  eppy_residential_archetypes.py  estimate_commercial_demand.md  estimate_commercial_demand.py  estimate_data_centre_demand.md  estimate_data_centre_demand.py  estimate_residential_demand.md  estimate_residential_demand.py  resi_demand_scaled.md  residential-archetype-peak-loads.md  total_dublin_demand.md  waste_heat_resources_map.md
