[tool.poetry]
name = "dem"
version = "0.1.0"
description = "A bottom-up energy model of Dublin"
authors = ["codema-dev <codema-dev@codema.ie>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.5.3"
tqdm = "^4.56.0"
geopandas = "^0.8.2"
matplotlib = "^3.3.4"
numpy = "^1.20.0"
pandas = "^1.2.1"
prefect = "^0.14.6"
pyarrow = "^3.0.0"
pygeos = "^0.9"
eppy = "^0.5.54"
Shapely = "^1.7.1"
notebook = "^6.2.0"
jupytext = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
